--- a/res/config.h.in
+++ b/res/config.h.in
@@ -2,7 +2,7 @@
 
 #define PROJECT "@PROJECT_NAME@"
 #define PRODUCT "@PRODUCT_NAME@"
-#define VERSION "@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@.@PROJECT_VERSION_PATCH@.@PROJECT_VERSION_TWEAK@"
+#define VERSION "@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@.@PROJECT_VERSION_PATCH@"
 #define COPYING "@COPYING_TEXT@"
 
 #define VERSION_MAJOR @PROJECT_VERSION_MAJOR@
